[metadata]
# replace with your username:
name = pygreensens
version = 0.3.1
author = PijiuLaoshi
author_email = pijiulaoshi@gmail.com
description = Python package for GreenSens Plant Sensor Api
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pijiulaoshi/pygreensens
project_urls =
    Bug Tracker = https://github.com/pijiulaoshi/pygreensens/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
